# wasmedge-aot-mem-issue

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
prerendering/: Cargo.toml  Makefile  build.rs  input.json
prerendering/src/: lib.rs  run.rs
prerendering/src/canvas/: dummy.rs  mod.rs  pathfinder.rs  raqote.rs  rpc.rs  skia.rs  trait.rs
prerendering_wasm/: .gitignore  Cargo.toml  Makefile  build.rs
prerendering_wasm/modules/: crypto.js
prerendering_wasm/src/: main.rs
