[package]
name = "prerendering"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

#[[bin]]
#name = "prerendering"
#path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmedge-sdk = "0.4.0"
wasmedge-sys = "*"

anyhow = "1.0"
lazy_static = "1.4.0"
serde = "1.0"
serde_json = "1.0"

pathfinder_canvas = { version="0.5", features=["pf-text"] }
pathfinder_geometry = "0.5.1"
pathfinder_content = "0.5"
pathfinder_renderer = "0.5"
pathfinder_export = {commit="9e0331742dedfed41d9e7791a9afbead0e0fbcd5", git = "https://github.com/servo/pathfinder"}

hex_color = "2"
csscolorparser = "0.6.2"
async-channel = "1.7.1"
tokio = { version="1", features = ["full"] }
resvg = "0.23.0"
usvg = "0.23.0"
tiny-skia = "0.6"

[build-dependencies]
wasmedge-sdk = "0.4.0"
wasmedge-sys = "*"